--- a/preview.html
+++ b/preview.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OrderFlow OMS - 独立预览版</title>
+  <title>南韩化工厂 - 独立预览版</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <!-- React & ReactDOM -->
@@ -788,22 +788,120 @@
           );
       };
 
+      const PDAView = () => {
+          const [tab, setTab] = useState('ops');
+          const mockRecords = [
+              { id: 1, type: 'in', time: '10:30', product: '湿法氟化铝', qty: 32, loc: '1号库-A区' },
+              { id: 2, type: 'out', time: '09:15', product: '萤石', qty: 15, loc: '1号库-B区' },
+              { id: 3, type: 'transfer', time: '08:45', product: '硫酸', qty: 5, loc: 'B区 -> C区' },
+              { id: 4, type: 'in', time: 'Yesterday', product: '包装袋', qty: 500, loc: '辅料库' },
+          ];
+
+          return (
+            <div className="h-full bg-gray-50 flex flex-col">
+                <div className="bg-slate-800 text-white px-4 py-3 flex items-center gap-3 shadow-md sticky top-0 z-10">
+                    <button onClick={() => setView('home')}><ChevronLeft /></button>
+                    <h2 className="font-bold text-lg">智能仓储 PDA</h2>
+                </div>
+                <div className="flex-1 overflow-y-auto p-4">
+                    {tab === 'ops' && (
+                        <div className="grid grid-cols-2 gap-4">
+                            <button className="bg-white p-6 rounded-xl shadow-sm flex flex-col items-center justify-center gap-3 active:bg-blue-50 border border-gray-100 h-40">
+                                <div className="w-14 h-14 rounded-full bg-green-100 text-green-600 flex items-center justify-center"><ArrowDownCircle size={32} /></div>
+                                <span className="font-bold text-gray-700">扫码入库</span>
+                            </button>
+                            <button className="bg-white p-6 rounded-xl shadow-sm flex flex-col items-center justify-center gap-3 active:bg-blue-50 border border-gray-100 h-40">
+                                <div className="w-14 h-14 rounded-full bg-orange-100 text-orange-600 flex items-center justify-center"><ArrowUpCircle size={32} /></div>
+                                <span className="font-bold text-gray-700">扫码出库</span>
+                            </button>
+                            <button className="bg-white p-6 rounded-xl shadow-sm flex flex-col items-center justify-center gap-3 active:bg-blue-50 border border-gray-100 h-40">
+                                <div className="w-14 h-14 rounded-full bg-blue-100 text-blue-600 flex items-center justify-center"><RefreshCw size={32} /></div>
+                                <span className="font-bold text-gray-700">移库调拨</span>
+                            </button>
+                            <button className="bg-white p-6 rounded-xl shadow-sm flex flex-col items-center justify-center gap-3 active:bg-blue-50 border border-gray-100 h-40">
+                                <div className="w-14 h-14 rounded-full bg-purple-100 text-purple-600 flex items-center justify-center"><ClipboardCheck size={32} /></div>
+                                <span className="font-bold text-gray-700">库存盘点</span>
+                            </button>
+                        </div>
+                    )}
+                    {tab === 'inv' && (
+                        <div className="space-y-4">
+                            {MOCK_WAREHOUSES.map(wh => (
+                                <div key={wh.id} className="bg-white rounded-xl shadow-sm border border-gray-100 overflow-hidden">
+                                    <div className="bg-gray-50 px-4 py-2 border-b flex justify-between items-center">
+                                        <div className="font-bold text-gray-800 flex items-center gap-2"><Box size={16} className="text-slate-500"/> {wh.name}</div>
+                                        <span className="text-xs bg-white border px-2 py-0.5 rounded text-gray-500">{wh.type}</span>
+                                    </div>
+                                    <div className="divide-y">
+                                        {wh.zones.map(z => (
+                                            <div key={z.id} className="p-3 flex justify-between items-center text-sm">
+                                                <span className="text-gray-600 font-medium">{z.name}</span>
+                                                <div className="text-right">
+                                                    {z.inventory.length > 0 ? (
+                                                        <div className="flex flex-col items-end">
+                                                            {z.inventory.map(i => (
+                                                                <div key={i.id}><span className="font-bold text-slate-700">{i.productName}: </span><span className="text-blue-600">{i.quantity}{i.unit}</span></div>
+                                                            ))}
+                                                        </div>
+                                                    ) : <span className="text-gray-300 text-xs">空闲</span>}
+                                                </div>
+                                            </div>
+                                        ))}
+                                    </div>
+                                </div>
+                            ))}
+                        </div>
+                    )}
+                    {tab === 'rec' && (
+                        <div className="space-y-3">
+                            {mockRecords.map(r => (
+                                <div key={r.id} className="bg-white p-4 rounded-xl shadow-sm border border-gray-100 flex justify-between items-center">
+                                    <div className="flex items-center gap-3">
+                                        <div className={`w-10 h-10 rounded-full flex items-center justify-center text-white ${r.type === 'in' ? 'bg-green-500' : r.type === 'out' ? 'bg-orange-500' : 'bg-blue-500'}`}>
+                                            {r.type === 'in' ? <ArrowDownCircle size={18}/> : r.type === 'out' ? <ArrowUpCircle size={18}/> : <RefreshCw size={18}/>}
+                                        </div>
+                                        <div>
+                                            <div className="font-bold text-gray-800">{r.product} <span className="text-gray-400 font-normal">| {r.qty}吨</span></div>
+                                            <div className="text-xs text-gray-500">{r.loc}</div>
+                                        </div>
+                                    </div>
+                                    <div className="text-xs text-gray-400 font-mono">{r.time}</div>
+                                </div>
+                            ))}
+                        </div>
+                    )}
+                </div>
+                <div className="bg-white border-t border-gray-200 flex justify-around p-1 pb-3">
+                    <button onClick={() => setTab('ops')} className={`flex flex-col items-center justify-center p-2 rounded-lg w-full transition-colors ${tab === 'ops' ? 'text-slate-800' : 'text-gray-400 hover:text-gray-600'}`}><ScanLine size={24} className={tab === 'ops' ? 'fill-current opacity-20' : ''}/><span className="text-[10px] font-bold mt-1">作业</span></button>
+                    <button onClick={() => setTab('inv')} className={`flex flex-col items-center justify-center p-2 rounded-lg w-full transition-colors ${tab === 'inv' ? 'text-slate-800' : 'text-gray-400 hover:text-gray-600'}`}><Box size={24} className={tab === 'inv' ? 'fill-current opacity-20' : ''}/><span className="text-[10px] font-bold mt-1">库存</span></button>
+                    <button onClick={() => setTab('rec')} className={`flex flex-col items-center justify-center p-2 rounded-lg w-full transition-colors ${tab === 'rec' ? 'text-slate-800' : 'text-gray-400 hover:text-gray-600'}`}><List size={24} className={tab === 'rec' ? 'fill-current opacity-20' : ''}/><span className="text-[10px] font-bold mt-1">记录</span></button>
+                </div>
+            </div>
+          );
+      };
+
       return (
         <div className="flex justify-center items-center h-[calc(100vh-100px)] overflow-hidden bg-gray-100 p-4">
             <div className="relative w-[375px] h-[750px] bg-black rounded-[3rem] shadow-2xl border-8 border-gray-800 overflow-hidden shrink-0">
                 <div className="w-full h-full bg-white pt-8 relative overflow-y-auto">
                     {view === 'home' && (
                         <div className="p-6 space-y-4">
-                            <div className="bg-blue-600 h-32 rounded-xl flex items-center justify-center text-white font-bold text-xl shadow-lg mb-6">工厂 APP</div>
+                            <div className="bg-blue-600 h-32 rounded-xl flex items-center justify-center text-white font-bold text-xl shadow-lg mb-6">南韩化工厂</div>
                             <button onClick={() => setView('todo-list')} className="w-full bg-white p-5 rounded-xl shadow-sm flex items-center gap-4 hover:shadow-md transition-all border border-gray-100 relative overflow-hidden">
                                 <div className="w-12 h-12 bg-red-50 rounded-full flex items-center justify-center text-red-500"><FileCheck size={24} /></div>
                                 <div className="text-left flex-1"><h3 className="font-bold text-gray-800 text-lg">我的待办</h3><p className="text-gray-500 text-sm">审批、审核与确认事项</p></div>
                                 {pendingTasks.length > 0 && <div className="absolute top-4 right-4 bg-red-500 text-white text-xs font-bold px-2 py-1 rounded-full shadow-sm animate-pulse">{pendingTasks.length}</div>}
                             </button>
-                            <button onClick={() => setView('stats')} className="w-full bg-white p-5 rounded-xl shadow-sm flex items-center gap-4 hover:shadow-md transition-all border border-gray-100">
-                                <div className="w-12 h-12 bg-indigo-100 rounded-full flex items-center justify-center text-indigo-600"><PieChart size={24} /></div>
-                                <div className="text-left"><h3 className="font-bold text-gray-800 text-lg">统计分析</h3><p className="text-gray-500 text-sm">查看经营数据日报</p></div>
-                            </button>
+                            <div className="grid grid-cols-2 gap-4">
+                                <button onClick={() => setView('pda')} className="bg-white p-4 rounded-xl shadow-sm flex flex-col items-center justify-center gap-2 hover:shadow-md transition-all border border-gray-100 h-32">
+                                    <div className="w-10 h-10 bg-slate-800 rounded-full flex items-center justify-center text-white shadow-md"><ScanLine size={20} /></div>
+                                    <div className="text-center"><h3 className="font-bold text-gray-800 text-sm">智能仓储 PDA</h3><p className="text-gray-400 text-[10px]">扫码/库存/盘点</p></div>
+                                </button>
+                                <button onClick={() => setView('stats')} className="bg-white p-4 rounded-xl shadow-sm flex flex-col items-center justify-center gap-2 hover:shadow-md transition-all border border-gray-100 h-32">
+                                    <div className="w-10 h-10 bg-indigo-100 rounded-full flex items-center justify-center text-indigo-600"><PieChart size={20} /></div>
+                                    <div className="text-center"><h3 className="font-bold text-gray-800 text-sm">统计分析</h3><p className="text-gray-400 text-[10px]">经营数据日报</p></div>
+                                </button>
+                            </div>
                             <button onClick={() => { setFormData(INITIAL_FORM_DATA); setView('driver'); }} className="w-full bg-white p-5 rounded-xl shadow-sm flex items-center gap-4 hover:shadow-md transition-all border border-gray-100"><div className="w-12 h-12 bg-blue-100 rounded-full flex items-center justify-center text-blue-600"><User size={24} /></div><div className="text-left"><h3 className="font-bold text-gray-800 text-lg">驾驶员填报</h3><p className="text-gray-500 text-sm">硫酸卸货信息登记</p></div></button>
                             <button onClick={() => setView('staff-list')} className="w-full bg-white p-5 rounded-xl shadow-sm flex items-center gap-4 hover:shadow-md transition-all border border-gray-100"><div className="w-12 h-12 bg-green-100 rounded-full flex items-center justify-center text-green-600"><Shield size={24} /></div><div className="text-left"><h3 className="font-bold text-gray-800 text-lg">卸货查验核准</h3><p className="text-gray-500 text-sm">选择车辆进行安全检查</p></div></button>
                             <button onClick={() => setView('production')} className="w-full bg-white p-5 rounded-xl shadow-sm flex items-center gap-4 hover:shadow-md transition-all border border-gray-100"><div className="w-12 h-12 bg-purple-100 rounded-full flex items-center justify-center text-purple-600"><Factory size={24} /></div><div className="text-left"><h3 className="font-bold text-gray-800 text-lg">生产日报录入</h3><p className="text-gray-500 text-sm">每日产量与原料消耗</p></div></button>
@@ -811,6 +909,7 @@
                     )}
                     {view === 'todo-list' && <TodoListView />}
                     {view === 'stats' && <StatisticsView />}
+                    {view === 'pda' && <PDAView />}
                     {view === 'driver' && <DriverView />}
                     {view === 'staff-list' && <StaffListView />}
                     {view === 'staff-detail' && <StaffDetailView />}
@@ -850,7 +949,7 @@
        return (
          <div className="flex h-screen bg-gray-100">
             <div className="w-64 bg-slate-900 text-white p-4 space-y-2">
-               <div className="font-bold text-lg mb-6">OrderFlow</div>
+               <div className="font-bold text-lg mb-6">南韩化工厂</div>
                <button onClick={() => setCurrentView('warehouse_view')} className="block w-full text-left p-2 hover:bg-slate-800 rounded">仓库概览</button>
                <button onClick={() => setCurrentView('warehouse_ops')} className="block w-full text-left p-2 hover:bg-slate-800 rounded">库存作业</button>
                <button onClick={() => setCurrentView('app_simulation')} className="block w-full text-left p-2 hover:bg-slate-800 rounded">APP 模拟</button>
